# wifi_http_otaf_soc

./: .gitignore  917_I2C.csv  917_I2C.sal  917_SPI_0x10.sal  917_SPI_init.sal  Arduino_SPI_init.sal  OTAU.code-workspace  README.md  wifi_http_otaf_soc.code-workspace
firmware/: firmware.code-workspace
firmware/wifi_http_otaf_soc/: .projectlinkstore  app.c  blinky.c  blinky.h  certificate_script.py  main.c  readme.md  vscode.conf  wifi_http_otaf_soc.pintool  wifi_http_otaf_soc.slcp  wifi_http_otaf_soc.slpb  wifi_http_otaf_soc.slps
firmware/wifi_http_otaf_soc/autogen/: sl_component_catalog.h  sl_event_handler.c
firmware/wifi_http_otaf_soc/cmake_gcc/: CMakeLists.txt  CMakePresets.json  wifi_http_otaf_soc.cmake
firmware/wifi_http_otaf_soc/config/: RTE_Device_917.h  pin_config.h  sl_net_default_values.h  sl_si91x_led_init_led0_config.h
iostream_usart_baremetal/: .projectlinkstore  iostream_usart_baremetal.pintool  iostream_usart_baremetal.slcp  iostream_usart_baremetal.slpb  iostream_usart_baremetal.slps  vscode.conf
iostream_usart_baremetal/autogen/: sl_component_catalog.h  sl_event_handler.c  sl_iostream_handles.h  sl_iostream_init_si91x_uart.c
iostream_usart_baremetal/cmake_gcc/: CMakeLists.txt  CMakePresets.json  iostream_usart_baremetal.cmake
iostream_usart_baremetal/config/: pin_config.h  sl_iostream_usart_vcom_config.h  sl_si91x_usart_common_config.h  sl_si91x_usart_config.h
ml_image_classifier/: .projectlinkstore  app.c  app.h  image_classifier.cc  image_classifier.h  ml_image_classifier.pintool  ml_image_classifier.slcp  ml_image_classifier.slps  readme.md  recognize_commands.h  vscode.conf
ml_image_classifier/autogen/: gen.properties  linkerfile.ld  sl_component_catalog.h  sl_device_init_clocks.c  sl_event_handler.c  sl_iostream_handles.c  sl_iostream_handles.h  sl_power_manager_handler.c  sl_tflite_micro_model.c  sl_tflite_micro_model_parameters.h
ml_image_classifier/autogen/sbom/: spdx_bom.spdx  (+3 more)
ml_image_classifier/cmake_gcc/: CMakeLists.txt  CMakePresets.json  ml_image_classifier.cmake
ml_image_classifier/config/: image_classifier_config.h  pin_config.h  sl_driver_mvp_config.h  sl_i2cspm_sensor_config.h  sl_memory_manager_config.h  sl_ml_arducam_config.h  sl_ml_image_feature_generation_config.h  sl_simple_led_led0_config.h  sl_simple_led_led1_config.h  sl_spidrv_exp_config.h
sl_si91x_gspi/: .projectlinkstore  sl_si91x_gspi.slcp  sl_si91x_gspi.slps  vscode.conf
sl_si91x_gspi/autogen/: sl_component_catalog.h  sl_event_handler.c
sl_si91x_gspi/cmake_gcc/: CMakeLists.txt  CMakePresets.json  sl_si91x_gspi.cmake
sl_si91x_gspi/config/: pin_config.h  sl_si91x_gspi_common_config.h
sl_si91x_i2c_driver_leader/: .projectlinkstore  sl_si91x_i2c_driver_leader.slcp  sl_si91x_i2c_driver_leader.slps  vscode.conf
sl_si91x_i2c_driver_leader/autogen/: sl_component_catalog.h  sl_event_handler.c  sl_i2c_init.c  sl_i2c_instances.h
sl_si91x_i2c_driver_leader/cmake_gcc/: sl_si91x_i2c_driver_leader.cmake
sl_si91x_i2c_driver_leader/config/: pin_config.h  sl_si91x_i2c_init_i2c2_config.h
wifi_embedded_mqtt_client_soc/: .projectlinkstore  vscode.conf  wifi_embedded_mqtt_client_soc.slcp  wifi_embedded_mqtt_client_soc.slpb  wifi_embedded_mqtt_client_soc.slps
wifi_embedded_mqtt_client_soc/cmake_gcc/: CMakeLists.txt  CMakePresets.json  wifi_embedded_mqtt_client_soc.cmake
wifi_http_otaf_soc_2708A/: .projectlinkstore  app.c  app.c.txt  app.h  app_BLINKY.c.txt  app_MQTT.c.txt  app_OTAF.c.txt  main.c  ov2640_regs.h  vscode.conf  wifi_http_otaf_soc_2708A.Makefile  wifi_http_otaf_soc_2708A.pintool  wifi_http_otaf_soc_2708A.project.mak  wifi_http_otaf_soc_2708A.slcp  wifi_http_otaf_soc_2708A.slpb  wifi_http_otaf_soc_2708A.slps
wifi_http_otaf_soc_2708A/.uceditor/: .wifi_http_otaf_soc_2708A.%extension-wiseconnect3_sdk%i2c_instancei2c0.cedit  .wifi_http_otaf_soc_2708A.%extension-wiseconnect3_sdk%iostream_si91x.cedit  .wifi_http_otaf_soc_2708A.%extension-wiseconnect3_sdk%sl_gspi.cedit
wifi_http_otaf_soc_2708A/ArduCAM/: ArduCAM.cpp
wifi_http_otaf_soc_2708A/autogen/: sl_component_catalog.h  sl_event_handler.c  sl_iostream_init_si91x_uart.h
wifi_http_otaf_soc_2708A/cmake_gcc/: CMakeLists.txt  CMakePresets.json  wifi_http_otaf_soc_2708A.cmake
wifi_http_otaf_soc_2708A/config/: pin_config.h  sl_iostream_usart_vcom_config.h  sl_net_default_values.h  sl_si91x_gspi_common_config.h  sl_si91x_gspi_config.h  sl_si91x_i2c_init_i2c0_config.h  sl_si91x_led_init_led0_config.h  sl_si91x_uart_common_config.h  sl_si91x_usart_common_config.h  sl_si91x_usart_config.h
(+56 files in other folders)
