# Define minimal required version of CMake.
cmake_minimum_required(VERSION "3.25")

# Project definition
project(
	iostream_usart_baremetal
	VERSION 1.0
	LANGUAGES C CXX ASM
)

# Include the definition of the slc_iostream_usart_baremetal target,
# which contains the content of the SLC project
include(iostream_usart_baremetal.cmake)

add_executable(iostream_usart_baremetal
    # Add additional sources here
)

target_include_directories(iostream_usart_baremetal PUBLIC
    # Add additional include paths here
)

target_compile_definitions(iostream_usart_baremetal PUBLIC
    # Add additional macros here
)

target_compile_options(iostream_usart_baremetal PUBLIC
    # Set additional compiler flags here
)

target_link_options(iostream_usart_baremetal PUBLIC
    # Set additional linker flags here
)

# Link with the content defined in the SLC project
target_link_libraries(iostream_usart_baremetal PRIVATE
    slc
)

# Include managed project content if available
include(iostream_usart_baremetal_project.cmake OPTIONAL RESULT_VARIABLE managed_project)
if(managed_project)
    message(STATUS "Using managed project content from ${managed_project}")
endif()

# Force the gcc linker command
set_target_properties(iostream_usart_baremetal PROPERTIES LINKER_LANGUAGE C)

# Create .bin, .hex and .s37 artifacts after building the project
add_custom_command(TARGET iostream_usart_baremetal
    POST_BUILD
    COMMAND ${CMAKE_OBJCOPY} ${OBJCOPY_SREC_CMD} "$<TARGET_FILE:iostream_usart_baremetal>" "$<TARGET_FILE_DIR:iostream_usart_baremetal>/$<TARGET_FILE_BASE_NAME:iostream_usart_baremetal>.s37"
    COMMAND ${CMAKE_OBJCOPY} ${OBJCOPY_IHEX_CMD} "$<TARGET_FILE:iostream_usart_baremetal>" "$<TARGET_FILE_DIR:iostream_usart_baremetal>/$<TARGET_FILE_BASE_NAME:iostream_usart_baremetal>.hex"
    COMMAND ${CMAKE_OBJCOPY} ${OBJCOPY_BIN_CMD}  "$<TARGET_FILE:iostream_usart_baremetal>" "$<TARGET_FILE_DIR:iostream_usart_baremetal>/$<TARGET_FILE_BASE_NAME:iostream_usart_baremetal>.bin" 
)

# Run post-build pipeline to perform additional post-processing
if(post_build_command)
add_custom_command(TARGET iostream_usart_baremetal
    POST_BUILD
    WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/..
    COMMAND ${post_build_command}
)
endif()