# Define minimal required version of CMake.
cmake_minimum_required(VERSION "3.25")

# Project definition
project(
	ml_image_classifier
	VERSION 1.0
	LANGUAGES C CXX ASM
)

# Include the definition of the slc_ml_image_classifier target,
# which contains the content of the SLC project
include(ml_image_classifier.cmake)

add_executable(ml_image_classifier
    # Add additional sources here
)

target_include_directories(ml_image_classifier PUBLIC
    # Add additional include paths here
)

target_compile_definitions(ml_image_classifier PUBLIC
    # Add additional macros here
)

target_compile_options(ml_image_classifier PUBLIC
    # Set additional compiler flags here
)

target_link_options(ml_image_classifier PUBLIC
    # Set additional linker flags here
)

# Link with the content defined in the SLC project
target_link_libraries(ml_image_classifier PRIVATE
    slc
)

# Include managed project content if available
include(ml_image_classifier_project.cmake OPTIONAL RESULT_VARIABLE managed_project)
if(managed_project)
    message(STATUS "Using managed project content from ${managed_project}")
endif()

# Force the gcc linker command
set_target_properties(ml_image_classifier PROPERTIES LINKER_LANGUAGE C)

# Create .bin, .hex and .s37 artifacts after building the project
add_custom_command(TARGET ml_image_classifier
    POST_BUILD
    COMMAND ${CMAKE_OBJCOPY} ${OBJCOPY_SREC_CMD} "$<TARGET_FILE:ml_image_classifier>" "$<TARGET_FILE_DIR:ml_image_classifier>/$<TARGET_FILE_BASE_NAME:ml_image_classifier>.s37"
    COMMAND ${CMAKE_OBJCOPY} ${OBJCOPY_IHEX_CMD} "$<TARGET_FILE:ml_image_classifier>" "$<TARGET_FILE_DIR:ml_image_classifier>/$<TARGET_FILE_BASE_NAME:ml_image_classifier>.hex"
    COMMAND ${CMAKE_OBJCOPY} ${OBJCOPY_BIN_CMD}  "$<TARGET_FILE:ml_image_classifier>" "$<TARGET_FILE_DIR:ml_image_classifier>/$<TARGET_FILE_BASE_NAME:ml_image_classifier>.bin" 
)

# Run post-build pipeline to perform additional post-processing
if(post_build_command)
add_custom_command(TARGET ml_image_classifier
    POST_BUILD
    WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/..
    COMMAND ${post_build_command}
)
endif()